objects/MCM_Reporting_Data__c.object
<CustomObject>
    <fields>
        <fullName>Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MCM Configuration</label>
        <referenceTo>MCM_Configuration_Detail__c</referenceTo>
        <relationshipLabel>MCM Reporting Data</relationshipLabel>
        <relationshipName>MCM_Reporting_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Type__c</fullName>
        <label>Cost Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Device_Part_Cost__c</fullName>
        <description>This field is use to calculate the Device Cost. 
Device cost will be sum of this field for all the Configuration group by Year &amp; Quarter</description>
        <formula>IF(Cost_Type__c = &apos;Configuration-Unit Cost&apos;,  Cost__c  *  Configuration__r.Chip_per_Technology__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device Part Cost</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MCM__c</fullName>
        <label>PCM MCM Detail</label>
        <referenceTo>PCM_MCM_Detail__c</referenceTo>
        <relationshipLabel>MCM Reporting Data</relationshipLabel>
        <relationshipName>MCM_Reporting_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ship_Quantity__c</fullName>
        <label>Ship Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MCM Reporting Data</label>
    <nameField>
        <label>MCM Report Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MCM Reporting Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>